Kubernetes/Ingress/webserver-demo/pay.yaml
apiVersion: v1
kind: Service
metadata:
  name: pay-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector: 
    app: pay
