Kubernetes/Ingress/webserver-demo/ingress-old.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: marvel-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend: 
          serviceName: marvel-service
          servicePort: 80
      - path: /pay
        backend:
          serviceName: pay-service
          servicePort: 80
